Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-134316

[Reg] QFileOpenEvent isn't emitted for custom URI

XMLWordPrintable

    • macOS
    • 8
    • 4755f52c0 (dev), 0c7bea06c (6.9), 11f7ab988 (6.9.0), 73cfaa713 (6.8), 241e46862 (6.8.3)
    • Foundation Sprint 126, Foundation Sprint 127

      In qBittorrent we override QCoreApplication::event() for the macOS platform so we can observe QFileOpenEvent and handle our custom URI (magnet links).

      We bundle a suitable Info.plist for this, which you can see here.
      Our override is here.

      Up until 6.7.3 this worked fine. Every time the user clicked on a magnet link in their browser, qBittorrent was launched and the magnet URI was loaded.

      With 6.8.1/6.8.2 a QFileOpenEvent isn't emitted anymore for magnet links. So qBittorrent opens but doesn't load the magnet URI.

      Some users noted that the following commits introduced the problem:
      1. https://code.qt.io/cgit/qt/qtbase.git/commit/?id=664c7ffb212eb898ed03f7b19c883400fa027b6b
      2. https://code.qt.io/cgit/qt/qtbase.git/commit/?id=e8e881ba35fe7009961cbeb4b89efedc5371d5b5

       

      Those fixed QTBUG-124340

       

      Link to our bug: https://github.com/qbittorrent/qBittorrent/issues/22303

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vuokko Juha Vuolle
            sledgehammer999 sledgehammer999
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: